test/zinc_source/compile_errors/functions/09_duplicate_named_arg_same_name.zn
// expected-error: multiple values for argument 'x'

fn add(x, y = 2) {
    return x + y
}

fn main() {
    add(x=1, x=2)
}
